--- a/menu/index.html
+++ b/menu/index.html
@@ -67,6 +67,9 @@
         <div class="medium-12 large-12 columns">
             <h1>Menù</h1>
             <hr>
+            <h4>Dal Giovedì alla Domenica. Dalle 19:00 alle 23:00<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
+            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+            <hr>
         </div>
     </header>
 <!-- inizio tabbar switch-->
@@ -76,9 +79,6 @@
                 <li class="tab-title active" role="presentational">
                     <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cena</a>
                 </li>
-                <!-- <li class="tab-title" role="presentational">
-                    <a href="#pranzo" role="tab" tabindex="3" aria-selected="false" controls="pranzo">Pranzo</a>
-                </li> -->
                 <li class="tab-title" role="presentational">
                     <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
                 </li>
@@ -93,21 +93,10 @@
     <div class="tabs-content" id="menupage-text"> 
 <!-- cena --> 
         <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
-            <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 columns">
-                        <h4>Dal Giovedì alla Domenica. Dalle 19:00 alle 23:00
-                            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
-                        </h4>
-                        <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Per Stuzzicare</h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">  
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">  
                             <li>
                                 <h3>Alette di Pollo &emsp; 5,5</h3>    
                                 <p> in salsa piccante</p>
@@ -147,12 +136,10 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                             <li>
                                 <h3>Beerstrot 180 / 360 &emsp; 10,5 / 14,5</h3>    
                                 <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
@@ -192,12 +179,10 @@
                         </ul>                      
                     </div>   
                 </div>
-            </div>
-            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Carni <br></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                             <li>
                                 <h3>Chili &emsp; 9,5</h3>    
                                 <p>carne e fagioli serviti con polenta</p>
@@ -221,12 +206,10 @@
                         </ul>                      
                     </div>
                 </div>
-            </div>
-            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                             <li>
                                 <h3>Blondie &emsp; 5</h3>
                                 <p>brownie di cioccolato e nocciole servito con crema di mascarpone</p>
@@ -246,24 +229,14 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 small-12 columns">
-                        <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
-                        <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>      
-                    </div>
-                </div>
-            </div>
         </section>
 <!-- cena fine -->
 <!-- birra -->
         <section class="content" role="tabpanel" aria-hidden="false" id="birra">
-            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                             <li>
                                 <h3>Castelli Palmares &emsp;  4 &bull; 6</h3>
                                 <p>red ale 5,6%</p>
@@ -299,107 +272,111 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Birre artigianali in bottiglia</h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>MC-77 Mild the Gap 33cl &emsp; 5</h3>
-                                <p>4,5% ale scura</p>
-                            </li>
-                            <li>
-                                <h3>MC-77 Ape Regina 33cl &emsp; 6</h3>
-                                <p>6,9%  ale bionda al miele</p>
-                            </li>
-                        </ul>
-                        <br>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Gambrinus Pils 50cl &emsp; 6</h3>
-                                <p>4,9% bionda pils</p>
-                            </li>
-                            <li>
-                                <h3>Gusswerk Weiss IPA 33cl &emsp; 6</h3>
-                                <p>6,2% weiss amara biologica</p>
-                            </li>
-                            <li>
-                                <h3>Mullerbraue Oktoberfest 50cl &emsp; 6</h3>
-                                <p>5% hell poco gassata</p>
-                            </li>
-                        </ul>
-                        <br>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Manerba Fiordalisa 33cl &emsp; 5</h3>
-                                <p>5% blanche</p>
-                            </li>
-                            <li>
-                                <h3>MC-77 Sofronia 33cl &emsp; 6</h3>
-                                <p>5% blanche all’ibisco</p>
-                            </li>
-                            <li>
-                                <h3>MC-77 San Lorenzo 33cl &emsp; 6</h3>
-                                <p>5,2% blanche</p>
-                            </li>
-                        </ul>
-                        <br>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Castelli Calix Niger 33cl &emsp; 6</h3>
-                                <p>7,2% stout</p>
-                            </li>
-                        </ul>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Gusswerk Zum Wohl 33cl &emsp; 6</h3>
-                                <p>4,9% tedesca senza glutine biologica</p>
-                            </li>
-                        </ul>
-                        <br>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Against The Grain 75cl &emsp; 17</h3>
-                                <p>6,8% acida</p>
-                            </li>
-                            <li>
-                                <h3>Crooked Cranberry 37,5cl &emsp; 15</h3>
-                                <p>4,5% acida</p>
-                            </li>
-                            <li>
-                                <h3>Crooked Progenitor 37,5cl &emsp; 15</h3>
-                                <p>6,2% acida</p>
-                            </li>
-                            <li>
-                                <h3>Crooked Surette 37,5cl &emsp; 15</h3>
-                                <p>6,2% acida</p>
-                            </li>
-                            <li>
-                                <h3>Crooked Vielle 37,5cl &emsp; 15</h3>
-                                <p>6,2% acida</p>
-                            </li>
-                            <li>
-                                <h3>Jolly Pumpkin Maracaibo 75cl &emsp; 17</h3>
-                                <p>7,5% acida</p>
-                            </li>
-                            <li>
-                                <h3>Tall Tale &emsp; 17</span></h3>
-                                <p>8,5% acida</p>
-                            </li>
-                        </ul>
+                        <div class="paragraph-divider">
+                            <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                <li>
+                                    <h3>MC-77 Mild the Gap 33cl &emsp; 5</h3>
+                                    <p>4,5% ale scura</p>
+                                </li>
+                                <li>
+                                    <h3>MC-77 Ape Regina 33cl &emsp; 6</h3>
+                                    <p>6,9%  ale bionda al miele</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="paragraph-divider">
+                            <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                <li>
+                                    <h3>Gambrinus Pils 50cl &emsp; 6</h3>
+                                    <p>4,9% bionda pils</p>
+                                </li>
+                                <li>
+                                    <h3>Gusswerk Weiss IPA 33cl &emsp; 6</h3>
+                                    <p>6,2% weiss amara biologica</p>
+                                </li>
+                                <li>
+                                    <h3>Mullerbraue Oktoberfest 50cl &emsp; 6</h3>
+                                    <p>5% hell poco gassata</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="paragraph-divider">
+                            <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                <li>
+                                    <h3>Manerba Fiordalisa 33cl &emsp; 5</h3>
+                                    <p>5% blanche</p>
+                                </li>
+                                <li>
+                                    <h3>MC-77 Sofronia 33cl &emsp; 6</h3>
+                                    <p>5% blanche all’ibisco</p>
+                                </li>
+                                <li>
+                                    <h3>MC-77 San Lorenzo 33cl &emsp; 6</h3>
+                                    <p>5,2% blanche</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="paragraph-divider">
+                            <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                <li>
+                                    <h3>Castelli Calix Niger 33cl &emsp; 6</h3>
+                                    <p>7,2% stout</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="paragraph-divider">
+                            <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                <li>
+                                    <h3>Gusswerk Zum Wohl 33cl &emsp; 6</h3>
+                                    <p>4,9% tedesca senza glutine biologica</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="title-divider">
+                            <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                <li>
+                                    <h3>Against The Grain 75cl &emsp; 17</h3>
+                                    <p>6,8% acida</p>
+                                </li>
+                                <li>
+                                    <h3>Crooked Cranberry 37,5cl &emsp; 15</h3>
+                                    <p>4,5% acida</p>
+                                </li>
+                                <li>
+                                    <h3>Crooked Progenitor 37,5cl &emsp; 15</h3>
+                                    <p>6,2% acida</p>
+                                </li>
+                                <li>
+                                    <h3>Crooked Surette 37,5cl &emsp; 15</h3>
+                                    <p>6,2% acida</p>
+                                </li>
+                                <li>
+                                    <h3>Crooked Vielle 37,5cl &emsp; 15</h3>
+                                    <p>6,2% acida</p>
+                                </li>
+                                <li>
+                                    <h3>Jolly Pumpkin Maracaibo 75cl &emsp; 17</h3>
+                                    <p>7,5% acida</p>
+                                </li>
+                                <li>
+                                    <h3>Tall Tale &emsp; 17</h3>
+                                    <p>8,5% acida</p>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
         </section>
 <!-- birra fine-->
 <!-- vino -->
         <section class="content" role="tabpanel" aria-hidden="false" id="vino">
-            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Vino in Caraffa</h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                             <li>
                                 <h3>Rosso Piceno &emsp;Quarto 2,5 &bull; Litro 6</h3>
                                 <p>tavignano</p>
@@ -411,12 +388,10 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Vino in Bottiglia</h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                             <li>
                                 <h3>Libenter Rosso Piceno &emsp;13</h3>
                                 <p>tavignano</p>
@@ -440,9 +415,14 @@
                         </ul>
                     </div>
                 </div>
-            </div>
         </section>
 <!-- vino fine -->
+        <div class="row">
+                    <div class="large-12 medium-12 small-12 columns">
+                        <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+                        <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>      
+                    </div>
+                </div>
     </div>
 <!-- tab fine -->
 <!-- inizio footer -->
