--- a/menu/index.html
+++ b/menu/index.html
@@ -209,24 +209,27 @@
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                            <li>
-                                <h3>Blondie &emsp; 5</h3>
-                                <p>brownie di cioccolato e nocciole servito con crema di mascarpone</p>
-                            </li>
-                            <li>
-                                <h3>Birramisù &emsp; 5</h3>
-                                <p>tiramisù alla birra stout</p>
-                            </li>
-                            <li>
-                                <h3>Cheesecake &emsp; 5</h3>
-                                <p>cheesecake stile new york</p>
-                            </li>
-                            <li>
-                                <h3>Sacher &emsp; 5</h3>
-                                <p>torta di cioccolato con marmellata di albicocca, servita con panna montata</p>
-                            </li>
-                        </ul>
+                        <div class="title-divider">
+                            <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                                <li>
+                                    <h3>Blondie &emsp; 5</h3>
+                                    <p>brownie di cioccolato e nocciole servito con crema di mascarpone</p>
+                                </li>
+                                <li>
+                                    <h3>Birramisù &emsp; 5</h3>
+                                    <p>tiramisù alla birra stout</p>
+                                </li>
+                                <li>
+                                    <h3>Cheesecake &emsp; 5</h3>
+                                    <p>cheesecake stile new york</p>
+                                </li>
+                                <li>
+                                    <h3>Sacher &emsp; 5</h3>
+                                    <p>torta di cioccolato con marmellata di albicocca, servita con panna montata</p>
+                                </li>
+                            </ul>
+                            <h2 class="subheader"><small>Forniamo dolci e torte. Se portate le vostre il servizio è di 2 € a persona</small></h2>
+                        </div>
                     </div>
                 </div>
         </section>
