--- a/asporto/index.html
+++ b/asporto/index.html
@@ -65,152 +65,150 @@
         <div class="medium-12 large-12 columns">
             <h1>Asporto</h1>
             <hr>
-            <p>Dal Giovedì alla Domenica dalle 18:30 alle 20:00</p>
-            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
-            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
+            <h4>Dal Giovedì alla Domenica. Dalle 19:00 alle 23:00<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
+            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+            <hr>
         </div>
     </header>
     <div id="menupage-text">
-        <div class="panel-menu-2n">
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Menu Special <br></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                        <li>
-                            <h3>Single <span class="right"><strike>&ensp;8,9&ensp;</strike>&emsp;6</span></h3>
-                            <p>hamburger + patate fritte</p>
-                        </li>
-                        <li>
-                            <h3>Famiglia<span class="right"><strike>&ensp;27,8&ensp;</strike>&emsp;18</span></h3>    
-                            <p>2 hamburger + 2 bocconcini di pollo + 2 patate fritte</p>
-                        </li>
-                        <li>
-                            <h3>Sport<span class="right"><strike>&ensp;30,9&ensp;</strike>&emsp;20</span></h3>    
-                            <p>hamburger + costine + alette di pollo + bocconcini di pollo + patate fritte</p>
-                        </li>
-                        <li class="hide-for-small"></li>
-                        <!-- <li>
-                            <h3 class="text-center">Aggiungi una Zuppa
-                                <span class="show-for-small"><strike>&ensp;4,5&ensp;</strike>&emsp;2</span>
-                                <span class=" hide-for-small"><strike>&ensp;4,5&ensp;</strike>&emsp;2</span>
-                            </h3>
-                        </li> -->
-                        <li class="hide-for-small"></li>
-                    </ul>                
-                </div>
+        <div class="row">
+            <div class="large-12 medium-12 small-12 columns">
+                <h2 class="subheader">Menu Special <br></h2>
+                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <li>
+                        <h3>Single <span class="right"><strike>&ensp;8,9&ensp;</strike>&emsp;6</span></h3>
+                        <p>hamburger + patate fritte</p>
+                    </li>
+                    <li>
+                        <h3>Famiglia<span class="right"><strike>&ensp;27,8&ensp;</strike>&emsp;18</span></h3>    
+                        <p>2 hamburger + 2 bocconcini di pollo + 2 patate fritte</p>
+                    </li>
+                    <li>
+                        <h3>Sport<span class="right"><strike>&ensp;30,9&ensp;</strike>&emsp;20</span></h3>    
+                        <p>hamburger + costine + alette di pollo + bocconcini di pollo + patate fritte</p>
+                    </li>
+                </ul>                
             </div>
-        </div>  
-        <div class="panel-menu-n">
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Per Stuzzicare</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                        <li>
-                            <h3>Peperoncini Piccanti<span class="right">4,5</span></h3>    
-                            <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
-                        </li>
-                        <li>
-                            <h3>Bufala e Pomodorini<span class="right">6,5</span></h3>    
-                            <p>caprese con olio extra vergine di oliva </p>
-                        </li>
-                        <li>
-                            <h3>Bocconcini di Pollo<span class="right">5</span></h3>    
-                            <p>petto di pollo di prima scelta impanato e fritto</p>
-                        </li>
-                        <li>
-                            <h3>Alette di Pollo<span class="right">5,5</span></h3>    
-                            <p> in salsa piccante</p>
-                        </li>
-                        <li>
-                            <h3>Nachos Supreme<span class="right">5</span></h3>    
-                            <p>tortilla con peperoncini e cheddar</p>
-                        </li>
-                        <li>
-                            <h3>Ratatouille<span class="right">4,5</span></h3>
-                            <p>verdure al forno</p>
-                        </li>
-                        <li>
-                            <h3>Verdure Grigliate<span class="right">4,5</span></h3>
-                            <p>verdure di stagione grigliate</p>
-                        </li>
-                        <li>
-                            <h3>Patate Fritte<span class="right">3,5</span></h3>    
-                            <p>patate fritte a bastoncini</p>
-                        </li>
-                        <li>
-                            <h3>Insalata Mista<span class="right">4</span></h3>    
-                            <p>con verdure di stagione</p>
-                        </li>
-                    </ul>
-                </div>
+        </div> 
+        <!-- cena --> 
+        <div class="row">
+            <div class="large-12 medium-12 small-12 columns">
+                <h2 class="subheader">Per Stuzzicare</h2>
+                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">  
+                    <li>
+                        <h3>Alette di Pollo &emsp; 5,5</h3>    
+                        <p> in salsa piccante</p>
+                    </li>
+                    <li>
+                        <h3>Bocconcini di Pollo &emsp; 5</h3>    
+                        <p>petto di pollo di prima scelta impanato e fritto</p>
+                    </li>
+                    <li>
+                        <h3>Nachos Supreme &emsp; 5</h3>    
+                        <p>tortilla con peperoncini e cheddar</p>
+                    </li>
+                    <li>
+                        <h3>Peperoncini Piccanti &emsp; 4,5</h3>    
+                        <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
+                    </li>
+                    <li>
+                        <h3>Cavoletti di Bruxelles &emsp; 4,5</h3>
+                        <p>brasati alla birra</p>
+                    </li>
+                    <li>
+                        <h3>Fagottini di Verza &emsp; 4,5</h3>
+                        <p>ripieni di zucca</p>
+                    </li>
+                    <li>
+                        <h3>Insalata Mista &emsp; 4</h3>    
+                        <p>con verdure di stagione</p>
+                    </li>
+                    <li>
+                        <h3>Patate Fritte &emsp; 3,5</h3>    
+                        <p>patate fritte a bastoncini</p>
+                    </li>
+                    <li>
+                        <h3>Zuppa di Stagione &emsp; 5</h3>    
+                        <p>vellutata di zucca</p>
+                    </li>
+                </ul>
             </div>
         </div>
-        <div class="panel-menu-2n">
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                        <li>
-                            <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9</span></a></h3>    
-                            <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
-                        </li>
-                        <li>
-                            <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9</span></a></h3>    
-                            <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
-                        </li>
-                        <li>
-                            <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9</span></a></h3> 
-                            <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
-                        </li>
-                        <li>
-                            <h3>Estivo<span class="right">8,9</span></h3> 
-                            <p>180 grammi di manzo, composta di feta e pomodorini, melanzana grigliata, rucola</p>
-                        </li>
-                        <li>
-                            <h3>Mini Burger<span class="right">6</span></h3>    
-                            <p>100 grammi di manzo, cheddar</p>
-                        </li>
-                        <li>
-                            <h3>Pollo<span class="right">8,9</span></h3>    
-                            <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
-                        </li>
-                        <li>
-                            <h3>Vegetariano<span class="right">8</span></h3>    
-                            <p>180 grammi di hamburger di tofu e zucchine, pomodorini confit e rucola</p>
-                        </li>
-                    </ul>                      
-                </div>   
+        <div class="row">
+            <div class="large-12 medium-12 small-12 columns">
+                <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
+                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <li>
+                        <h3>Beerstrot 180 / 360 &emsp; 10,5 / 14,5</h3>    
+                        <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
+                    </li>
+                    <li>
+                        <h3>New York &emsp; 8,9 / doppio 14,9</h3>    
+                        <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
+                    </li>
+                    <li>
+                        <h3>Diablo &emsp; 8,9 / doppio 14,9</h3>
+                        <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
+                    </li>
+                    <li>
+                        <h3>Deciso &emsp; 8,9 / doppio 14,9</h3> 
+                        <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
+                    </li>
+                    <li>
+                        <h3>Autunno &emsp; 8,9 / doppio 14,9</h3> 
+                        <p>180 grammi di manzo, composta di funghi, cipolla caramellata e panna</p>
+                    </li>
+                    <li>
+                        <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>    
+                        <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
+                    </li>
+                    <li>
+                        <h3>Pulled Pork &emsp; 8,9</h3>    
+                        <p>spalla di maiale sfilacciata, coleslow, cetriolini, salsa piccante</p>
+                    </li>
+                    <li>
+                        <h3>Mini Burger &emsp; 6</h3>    
+                        <p>100 grammi di manzo, cheddar</p>
+                    </li>
+                    <li>
+                        <h3>Vegetariano &emsp; 8</h3>    
+                        <p>180 grammi di hamburger di quinoa, barbabietola rossa, rucola, salsa di senape e miele</p>
+                    </li>
+                </ul>                      
             </div>
         </div>
-        <div class="panel-menu-n">
-            <div class="row">
-                    <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Carni <br></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine<span class="right">11,5</span></a></h3>    
-                                <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
-                            </li>
-                            <li>
-                                <h3>Tagliata di Pollo<span class="right">12</span></h3>    
-                                <p>300 grammi di petto di pollo servito su letto di rucola</p>
-                            </li>
-                            <li>
-                                <h3>Tagliata di Picanha<span class="right">19</span></h3>    
-                                <p>350 grammi di picanha di manzo servita su letto di rucola</p>
-                            </li>
-                        </ul>                      
-                    </div>
-                </div>
-        </div>
-        <div class="panel-menu-n">
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
-                    <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>      
-                </div>
+        <div class="row">
+            <div class="large-12 medium-12 small-12 columns">
+                <h2 class="subheader">Carni<br></h2>
+                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <li>
+                        <h3>Chili &emsp; 9,5</h3>    
+                        <p>carne e fagioli serviti con polenta</p>
+                    </li>
+                    <li>
+                        <h3>Costine &emsp; 11,5</h3>    
+                        <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
+                    </li>
+                    <li>
+                        <h3>Pollo alla Griglia &emsp; 12</h3>    
+                        <p>300 grammi di petto marinato servito con coleslaw 12</p>
+                    </li>
+                    <li>
+                        <h3>Tagliata di Picanha &emsp; 19</h3>    
+                        <p>350 grammi di picanha di manzo servita su letto di rucola</p>
+                    </li>
+                </ul>                      
             </div>
         </div>
+<!-- call to action inizio -->
+        <div class="row">
+            <div class="large-12 medium-12 small-12 columns">
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> 071 8853384</a></span>      
+            </div>
+        </div>
+<!-- call to action fine -->
+<!-- cena fine -->
     </div>
 <!-- inizio footer -->
     <footer class="panel-prefooter extra-space-footer">
