--- a/asporto/index.html
+++ b/asporto/index.html
@@ -71,17 +71,17 @@
         </div>
     </header>
     <div id="menupage-text">
-        <div class="row">
+        <!-- <div class="row">
             <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Menu Special <br></h2>
+                <h2 class="subheader">Menu Special</h2>
                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                     <li>
                         <h3>Single <span class="right"><strike>&ensp;8,9&ensp;</strike>&emsp;6</span></h3>
-                        <p>hamburger + patate fritte</p>
+                        <p>hamburger (escluso beerstrot e doppi) + patate fritte</p>
                     </li>
                     <li>
                         <h3>Famiglia<span class="right"><strike>&ensp;27,8&ensp;</strike>&emsp;18</span></h3>    
-                        <p>2 hamburger + 2 bocconcini di pollo + 2 patate fritte</p>
+                        <p>2 hamburger (escluso beerstrot e doppi) + 2 bocconcini di pollo + 2 patate fritte</p>
                     </li>
                     <li>
                         <h3>Sport<span class="right"><strike>&ensp;30,9&ensp;</strike>&emsp;20</span></h3>    
@@ -89,7 +89,7 @@
                     </li>
                 </ul>                
             </div>
-        </div> 
+        </div>  -->
         <!-- cena --> 
         <div class="row">
             <div class="large-12 medium-12 small-12 columns">
