--- a/asporto/index.html
+++ b/asporto/index.html
@@ -152,7 +152,7 @@
                     </li>
                     <li>
                         <h3>Vegetariano &emsp; 8</h3>    
-                        <p>180 grammi di hamburger di quinoa, barbabietola rossa, rucola, salsa di senape e miele</p>
+                        <p>180 grammi di hamburger di quinoa, rucola, barbabietola rossa, salsa di senape e miele</p>
                     </li>
                 </ul>                      
             </div>
