--- a/menu/index.html
+++ b/menu/index.html
@@ -228,7 +228,7 @@
                                 <p>torta di cioccolato con marmellata di albicocca, servita con panna montata</p>
                             </li>
                         </ul>
-                        <h2 class="subheader"><small>Forniamo dolci e torte. Se portate le vostre il servizio è di 2 € a persona</small></h2>
+                        <p>Compleanni e ricorrenze: forniamo dolci e torte, se portate le vostre il servizio è di 2 € a persona. Accettiamo solo prodotti di pasticceria.<p><br>
                     </div>
                 </div>
             </div>
